# faf-replay-parser-python

./: .gitignore  .gitlab-ci.yml  Cargo.toml  MANIFEST.in  Pipfile  README.md  build-wheels.sh  example.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: deploy.yml  test.yml
fafreplay/: __init__.py
src/: constants.rs  lib.rs  lua.rs  parser.rs  replay.rs
tests/: conftest.py  test_constants.py  test_extract.py  test_module.py  test_parser.py  test_shortcuts.py
tests/data/: 1418712.scfareplay  8653680.fafreplay  REPLAY_INFO.md
