[package]
name = "faf-replay-parser-python"
description = "Python bindings for faf-replay-parser"
version = "0.6.0"
authors = ["Askaholic"]
license = "LGPL-3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fafreplay"
crate-type = ["lib", "cdylib"]

[dependencies]
faf-replay-parser = "0.5.2"
pyo3 = { version = "0.16" }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
