[metadata]
name = faf-replay-parser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Askaholic/faf-replay-parser-python
license = License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha

    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)

    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS

    Topic :: Games/Entertainment :: Real Time Strategy

project_urls =
    Source=https://github.com/Askaholic/faf-replay-parser-python
    Tracker=https://github.com/Askaholic/faf-replay-parser-python/issues

[options]
packages = fafreplay
python_requires = >=3.7
